[package]
name = "moqgen-core"
version = "0.1.0"
edition = "2021"

[dependencies]
moq-lite   = { workspace = true }
moq-native = { workspace = true }
tokio      = { workspace = true }
bytes      = { workspace = true }
anyhow     = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
hdrhistogram = { workspace = true }
tracing    = { workspace = true }
tokio-util = { workspace = true }
url        = { workspace = true }
